Fix HTML structure and improve CSS styles for consistency and readability

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -20,6 +20,7 @@ img {
 
 body {
   font-family: var(--body-font);
+  font-weight: 100;
   color: var(--accent2-color);
 }
 
@@ -33,6 +34,7 @@ footer {
 h1,
 h2 {
   font-family: var(--heading-font);
+  font-weight: 400;
   color: var(--accent2-color);
 }
 
